--- a/style.css
+++ b/style.css
@@ -42,8 +42,10 @@ a {
     gap: 32px;
 }
 button {
-    background-color: blue;
+    background-color: #3882f6;
     color: white;
+    border-radius: 5px;
+    border: none;
 }
 /*the sections will need to use flexbox to seperate equally*/
 /*will change all the colors appropriately later, but we keep it this way for simplicity*/
@@ -54,7 +56,7 @@ button {
     align-items: center;
 }
 .box {
-    border: 3px solid blue;
+    border: 3px solid #3882f6;
     width: 100px;
     border-radius: 25px;
     aspect-ratio: 1/1;
@@ -79,14 +81,16 @@ button {
     flex-direction: column;
     justify-content: center;
     padding: 150px;
-    background-color: grey;
+    background-color: #e5e7eb;
 }
 .quote {
-    font-size: 32px;
+    font-size: 36px;
+    font-style: italic;
+    color:#1f2937;
 }
 /* section 4*/
 #c2a {
-    background-color: blue;
+    background-color: #3882f6;
     color: white;
     border: white solid 3px;
     border-radius: 5px;
@@ -105,7 +109,7 @@ button {
 
 }
 .plate {
-    background-color: blue;
+    background-color: #3882f6;
     border-radius: 10px;
     display: flex;
     justify-content: center;
